# bkp

./: bashrc
.aws/: config  (+1 more)
LAB/FTP-S3/: Cargo.toml
LAB/FTP-S3/src/: main.rs
LAB/JPG-JGW-2-TIF/: Cargo.toml
LAB/JPG-JGW-2-TIF/src/: main.rs
LAB/RUST/003/nautilus/: Cargo.toml  pyproject.toml
LAB/RUST/003/nautilus/core/: Cargo.toml
LAB/RUST/003/nautilus/core/src/: lib.rs
LAB/RUST/003/nautilus/python/src/nautilus/: __init__.py
LAB/RUST/003/nautilus/storage/: Cargo.toml
LAB/RUST/003/nautilus/storage/src/: lib.rs  local.rs  s3.rs  trait_def.rs
LAB/RUST/004/nautilus/: Cargo.toml  pyproject.toml
LAB/RUST/004/nautilus/core/: Cargo.toml
LAB/RUST/004/nautilus/core/src/: lib.rs
LAB/RUST/004/nautilus/dataset/: Cargo.toml
LAB/RUST/004/nautilus/dataset/src/: api.rs  bindings.rs  lib.rs
LAB/RUST/004/nautilus/python/src/nautilus/: __init__.py
LAB/RUST/004/nautilus/storage/: Cargo.toml
LAB/RUST/004/nautilus/storage/src/: _lib_orig.rs  api.rs  bindings.rs  lib.rs  local.rs  parallel.rs  pipeline.rs  s3.rs  trait_def.rs
LAB/RUST/004/nautilus/storage/src/providers/: local.rs  mod.rs  s3.rs  s3.rs-bkp  s3.rs-orig
LAB/RUST/004/s3_lister/: Cargo.toml
LAB/RUST/004/s3_lister/src/: main.rs  main.rs-001  main.rs-002  main.rs-003
LAB/RUST/deepsea-ai-001/: Cargo.toml  Makefile  README.md  pyproject.toml
LAB/RUST/deepsea-ai-001/crates/deepsea-core/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-dataset/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-experiments/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-python/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-runtime/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-storage/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-vector/src/: lib.rs
LAB/RUST/deepsea-ai-001/crates/deepsea-video/src/: lib.rs
LAB/RUST/deepsea-ai-001/plugins/experiment-dvc/src/: lib.rs
LAB/RUST/deepsea-ai-001/plugins/experiment-lakefs/src/: lib.rs
LAB/RUST/deepsea-ai-001/plugins/experiment-mlflow/src/: lib.rs
LAB/RUST/deepsea-ai-001/plugins/experiment-wandb/src/: lib.rs
LAB/RUST/deepsea-ai-001/plugins/storage-azure/src/: lib.rs
LAB/RUST/deepsea-ai-001/plugins/storage-s3/src/: lib.rs
LAB/RUST/deepsea-ai-001/scripts/: env.sh
LAB/RUST/nautilus/: Cargo.toml  pyproject.toml
LAB/RUST/nautilus/src/: lib.rs
LAB/SMB/cientifico-s3/: Cargo.toml  config.yaml  package-lock.json  s3ls.sh
LAB/SMB/cientifico-s3/src/: main.rs  s3_uploader.rs  smb_process_pool.rs  smb_worker.rs  upload_logger.rs
LAB/TEMPLATE-PYTHON/: main.py  pyproject.toml
PROJECTS/NOAA/NOAA-002/PYTHON/image-iceberg-pipeline/: README.md  current_files.txt  main.py  old_files.txt  pyproject.toml  test-spark.py
PROJECTS/NOAA/NOAA-002/PYTHON/image-iceberg-pipeline/config/: spark.conf
PROJECTS/NOAA/NOAA-002/PYTHON/image-iceberg-pipeline/src/: main.py
PROJECTS/NOAA/NOAA-002/PYTHON/image-iceberg-pipeline/src/features/: extract.py
PROJECTS/NOAA/NOAA-002/PYTHON/image-iceberg-pipeline/src/ingestion/: spark_session.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/: .style.yapf  pyproject.toml
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/data/raw/tubastraea/images/: summary.txt
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/data/raw/tubastraea/labels/test/: 20240324-231746-ic_COMco24_025.txt  20240324-231749-ic_COMco24_025.txt  20240324-231849-ic_COMco24_025.txt  20240324-232101-ic_COMco24_025.txt  20240325-012707-ic_COMco24_025.txt  20240325-012854-ic_COMco24_025.txt  20240325-012915-ic_COMco24_025.txt  20240325-012924-ic_COMco24_025.txt  20240419-010844-ic_COMll24_033.txt  (+81 more)
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/notebook/: 000-template.ipynb  002-buckets.ipynb  003-sankey.ipynb  004-solicitations.ipynb  006-description.ipynb  dashboard-Copy1.ipynb  dashboard-Copy2.ipynb  dashboard-Copy3.ipynb  dashboard.html  dashboard.ipynb  zzz-pyspark.ipynb
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/notebook/.ipynb_checkpoints/: 000-template-Copy1-checkpoint.ipynb  004-solicitations-checkpoint.html  004-solicitations-checkpoint.ipynb  005-data-checkpoint.ipynb  006-description-checkpoint.ipynb  dashboard-checkpoint.ipynb  zzz-pyspark-checkpoint.ipynb
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/notebook/output/: 003-sankey.html
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/notebook/output/.ipynb_checkpoints/: 001-basic-checkpoint.html  002-buckets-checkpoint.html  005-data-checkpoint.html
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/: custom_formatter.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/preprocessing/: Untitled.ipynb  Untitled2.ipynb  Untitled4.ipynb  data_cleaner.py  duplicate_images.json  image_metadata.json  image_summary.csv  report.html  similar_images.json  tubastraea_images.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/preprocessing/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  Untitled3-checkpoint.ipynb  data_cleaner-checkpoint.py  duplicate_images-checkpoint.json  image_metadata-checkpoint.json  image_summary-checkpoint.csv  report-checkpoint.html  similar_images-checkpoint.json
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/subsea/: sankey.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/subsea-bkp/: __init__.py  dashboard.py  data_size.py  easy_search.py  service_class.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/subsea-bkp/.ipynb_checkpoints/: __init__-checkpoint.py  dashboard-checkpoint.py  sankey-checkpoint.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/subsea/.ipynb_checkpoints/: dashboard-checkpoint.py  easy_search-checkpoint.py  sankey-checkpoint.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/subsea/easy_search/: __init__.py  dashboard.py  data_size.py  easy_search.py  sankey.py  service_class.py
REPOSITORIES/IA-Submarina-OnBoarding/IA-Submarina-OnBoarding/src/subsea/ecosystem/: __init__.py  environment.py
(+1781 files in other folders)
