[package]
name = "JPG-JGW-2-TIF"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.127.0"
bytes = "1.11.1"
futures = "0.3.32"
num_cpus = "1.17.0"
rayon = "1.11.0"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
