[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project]
name = "petrobras"
version = "2026!0.0.0"
requires-python = ">=3.13"

description = 'Petrobras library for AI, ML, and data analysis in oil and gas.'

readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
  "petrobras",
  "subsea",
  "data analysis",
  "machine learning",
  "deep learning",
  "computer vision",
  "natural language processing",
  "time series analysis",
  "geospatial analysis",
  "big data",
  "cloud computing",
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",

  "License :: Other/Proprietary License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",

  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

license = {file = "LICENSE.md"}


authors = [
  {name = "author-01 name", email = "author-01-email@petrobras.com.br"},
  {name = "author-02 name", email = "author-02-email@petrobras.com.br"},
]
maintainers = [
  {name = "Maintainer", email = "maintainer@petrobras.com.br"}
]

dependencies = [
    "albumentations>=2.0.8",
    "duckdb>=1.4.4",
    "keras>=3.13.2",
    "marimo>=0.19.11",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "polars>=1.38.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "torchvision>=0.25.0",
    "keras-cv>=0.9.0",
    "keras-hub>=0.19.0",
    "timm>=1.0.24",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "optuna>=4.7.0",
    "tensorflow>=2.20.0",
    "autokeras>=3.0.0",
    "tensorflow-probability>=0.25.0",
    "optimum>=2.1.0",
    "accelerate>=1.12.0",
    "geopandas>=1.1.2",
    "rasterio>=1.5.0",
    "pyspark>=4.1.1",
    "mlflow>=1.27.0",
    "dvc>=3.66.1",
    "boto3>=1.42.53",
    "tf-keras>=2.20.1",
    "langchain>=1.2.10",
    "nbformat>=5.10.4",
    "nbconvert[webpdf]>=7.17.0",
    "pandoc>=2.4",
    "tex>=1.8",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
]

[project.urls]
#homepage = ""
#repository = ""
#documentation = ""
#issue-tracker = ""
#change-log = ""

