[workspace]
members = [
"crates/deepsea-core",
"crates/deepsea-storage",
"crates/deepsea-video",
"crates/deepsea-dataset",
"crates/deepsea-runtime",
"crates/deepsea-vector",
"crates/deepsea-experiments",
"crates/deepsea-python",
"plugins/storage-s3",
"plugins/storage-azure",
"plugins/experiment-mlflow",
"plugins/experiment-wandb",
"plugins/experiment-lakefs",
"plugins/experiment-dvc",
"services/ingestion-service",
"services/dataset-builder",
"services/training-orchestrator"
]
resolver = "2"
[profile.release]
lto = true
codegen-units = 1
