[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "deepsea-ai"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
"numpy",
"torch",
"tensorflow",
"keras",
"scikit-learn",
"opencv-python",
"pyarrow",
"mlflow",
"wandb",
"dvc",
"lakefs-client",
"boto3",
"azure-storage-blob",
"pytest",
"pytest-xdist",
"ruff"
]

[tool.pytest.ini_options]
addopts = "-n auto"
[tool.ruff]
line-length = 100
