[package]
name = "nautilus"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nautilus"
crate-type = ["cdylib"]

[dependencies]
aws-config = { version = "1.8.15", features = ["credentials-login"] }
aws-sdk-s3 = "1.126.0"
pyo3 = "0.27.0"
tokio = { version = "1.50.0", features = ["full"] }
uuid = "1.22.0"
