[workspace]
# List every folder that contains a Rust crate
members = [
  "core",          # This will be your nautilus._core bridge
  "storage",       # Logic for your storage plugin
  "dataset",
  #"experiments",   # Logic for your experiments plugin
]

# Recommended: Use the modern feature resolver
resolver = "2"

[workspace.dependencies]
# Python bindings
pyo3 = { version = "0.28.2", features = ["extension-module", "auto-initialize"] }
numpy = "0.28.0"

# Data layer (zero-copy pipeline)
arrow = { version = "58.0.0", features = ["ffi"] }
arrow-schema = "58.0.0"
arrow-array = "58.0.0"
polars = { version = "0.53.0", features = ["lazy", "fmt"] }

# Parallelism
rayon = "1.11.0"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Serialization / config
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
