[package]
name = "s3_lister"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.127.0"
futures = "0.3.32"
indicatif = "0.18.4"
rand = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }
