[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Nautilus ML storage layer (pluggable, parallel, zero-copy ready)"

[lib]
name = "storage"
crate-type = [
  "cdylib",
  "rlib"
] # This allows it to be linked by your 'core' crate

[dependencies]
anyhow.workspace = true
arrow.workspace = true
numpy.workspace = true
polars.workspace = true
pyo3.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

bytes = "1.11.1"
futures = "0.3.32"
#tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

aws-sdk-s3 = { version = "1.127.0", optional = true }
aws-config = { version = "1.8.15", optional = true }
azure_storage = { version = "0.21.0", optional = true }
async-recursion = "1.1.1"
indicatif = "0.18.4"

[features]

default = ["local"]

local = []

s3 = [
  "aws-sdk-s3",
  "aws-config"
]

azure_storage = ["dep:azure_storage"]
aws-sdk-s3 = ["dep:aws-sdk-s3"]
aws-config = ["dep:aws-config"]

