[project]
name = "image-iceberg-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.95",
    "faiss-cpu>=1.13.2",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "imagehash>=4.3.2",
    "lakefs>=0.16.0",
    "marimo>=0.23.4",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "pyiceberg>=0.11.1",
    "pyspark>=4.1.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
